fix menu backgrounds and spacing

--- a/sass/pages/home.scss
+++ b/sass/pages/home.scss
@@ -20,6 +20,7 @@
     }
 
     &__explore{
+        background: $lighter-gray-background;
         flex-direction: column;
         padding: rem-calc(40) rem-calc(20) rem-calc(60);
         text-align: center;
@@ -60,7 +61,9 @@
             h2{
                 margin-bottom: 30px;
                 @media screen and (min-width: 768px) { 
-                    padding-left: rem-calc(160);
+                    display: flex;
+                    justify-content: center;
+                    width: 36%;
                 }
             }
             
@@ -138,9 +141,16 @@
 .main__restaurants {
     width: 100%;
     padding: 34px 20px 66px 20px;
-    margin-top: 68px;
     box-sizing: border-box;
     background: $lighter-gray-background;
+
+    h2{
+        margin-top:0;
+        margin-bottom: rem-calc(30);
+        @media screen and (min-width: 768px) { 
+            margin-left: rem-calc(10);
+        }
+    }
 }
 
 .restaurants-cards {
@@ -220,8 +230,6 @@
 
     /*explorer*/
     .main__explore{
-        margin-top: 30px;
-
         .main__explore__title{
             width: 100%;
             padding:0;
